--- a/adm/style/head_panel.html
+++ b/adm/style/head_panel.html
@@ -1,5 +1,5 @@
 {% include 'overall_header.html' %}
-{% INCLUDECSS '@' ~ NAMESPACE ~ '/admin_forms.css' %}
+{% INCLUDECSS '@' ~ NAMESPACE ~ '/css/admin_forms.css' %}
 
 <a name="maincontent"></a>
 
